--- a/SalesReportApp/src/main/webapp/pages/style.css
+++ b/SalesReportApp/src/main/webapp/pages/style.css
@@ -316,10 +316,10 @@ hr.dashed {
 }
 
 /*Loginpage Styles*/
-.loginform {
+/*.loginform {
   border-radius: 15px;
   height: auto;
-  position: absolute;
+  position: relative;
   background-color: rgba(242, 242, 242, 0.7);
   padding: 30px;
   margin: 30px;
@@ -397,4 +397,4 @@ input[type="submit"]:hover {
   text-shadow: black;
   font-size: 18px;
   font-family: "Poppins", sans-serif;
-}
+}*/
