--- a/SalesReportApp/src/main/webapp/pages/style.css
+++ b/SalesReportApp/src/main/webapp/pages/style.css
@@ -398,3 +398,16 @@ input[type="submit"]:hover {
   font-size: 18px;
   font-family: "Poppins", sans-serif;
 }*/
+
+.profileBox{
+    border: 2px dashed white;
+    color: white;
+    text-align: center;
+    width: fit-content;
+    padding: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+    border-radius: 30px;
+    margin: auto;
+    line-height: 25px;
+}
